# libConnect

./: CMakeLists.txt  ConCallback.h  ConConnectionCallback.h  ConServer.cpp  ConServer.h  ConSocket.h  ConStandAloneConnection.cpp  ConStandAloneConnection.h  ConTCPReceiver.cpp  ConTCPReceiver.h  ConThread.cpp  ConThread.h  ConThread2.cpp  ConThread2.h  library.h
GTest/: CMakeLists.txt  ConSocketMock.h  ConTCPReveiverTest.cpp  ConThread2Test.cpp  ConThreadTest.cpp  Main.cpp
TestApps/: CMakeLists.txt  ConSimpleServer.cpp  ConStandAloneTestClient.cpp  ConThreadTestApp.cpp
